@@ -35,7 +35,6 @@ import hudson.scm.ChangeLogSet;
 import hudson.scm.SCM;
 import hudson.util.AdaptedIterator;
 import java.util.AbstractSet;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -96,12 +95,12 @@ public interface RunWithSCM<JobT extends Job<JobT, RunT>,
             return calculateCulprits();
         }
 
-        return new AbstractSet<User>() {
-            private Set<String> culpritIds = Collections.unmodifiableSet(new HashSet<>(getCulpritIds()));
+        return new AbstractSet<>() {
+            private Set<String> culpritIds = Set.copyOf(getCulpritIds());
 
             @Override
             public Iterator<User> iterator() {
-                return new AdaptedIterator<String, User>(culpritIds.iterator()) {
+                return new AdaptedIterator<>(culpritIds.iterator()) {
                     @Override
                     protected User adapt(String id) {
                         // TODO: Probably it should not auto-create users
