@@ -7,7 +7,7 @@ import hudson.model.InvisibleAction;
 import hudson.model.RootAction;
 import java.lang.reflect.Field;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import javax.servlet.ServletException;
 import net.sf.json.JSONObject;
 import org.junit.Rule;
@@ -56,7 +56,7 @@ public class Security1097Test {
             final HtmlPage htmlPage2 = webClient.goTo("security1097/get2");
             j.submit(htmlPage2.getFormByName("config"));
         } finally {
-            allowed_http_verbs_for_forms.set(null, Collections.singletonList("POST"));
+            allowed_http_verbs_for_forms.set(null, List.of("POST"));
         }
     }
 
